--- a/_posts/2015-09-11-hello.markdown
+++ b/_posts/2015-09-11-hello.markdown
@@ -9,6 +9,6 @@ date:   2015-09-11 20:46:17
 
 Мы&nbsp;&mdash; это команда <nobr>web-разработчиков</nobr>, которая по&nbsp;роду профессиональной деятельности / персонального интереса, следит за&nbsp;новостями из&nbsp;мира frontend performance. И&nbsp;коль скоро мы&nbsp;этим и&nbsp;так уже занимаемся, так почему&nbsp;бы не&nbsp;поделиться тем что мы&nbsp;нашли с&nbsp;другими? Хочется верить, что будет преобладать авторский материал, но&nbsp;совершенно точно, здесь не&nbsp;будет [такого](/), [такого](/) и&nbsp;вот [такого](/).
 
-А&nbsp;чтобы не&nbsp;пропустить знаменательное открытие, ты&nbsp;можешь подписаться на&nbsp;наш (пока ещё пустой) [Твиттер](https://twitter.com/{{https://twitter.com/{{site.twitter_username }}), а&nbsp;если в&nbsp;тебе есть ещё и&nbsp;дух старой школы, то&nbsp;добавляй сразу в&nbsp;<nobr>RSS-ридер</nobr>.
+А&nbsp;чтобы не&nbsp;пропустить знаменательное открытие, ты&nbsp;можешь зафоловить наш (пока ещё пустой) [Твиттер](https://twitter.com/{{https://twitter.com/{{site.twitter_username }}), а&nbsp;если в&nbsp;тебе силён дух старой школы, то&nbsp;подпишись на [rss-фид](/feed.xml).
 
 &mdash;&nbsp;с&nbsp;любовью, команда perfception.com
