--- a/_posts/2015-09-11-hello.markdown
+++ b/_posts/2015-09-11-hello.markdown
@@ -5,7 +5,7 @@ date:   2015-09-11 20:46:17
 ---
 Дорогой друг,
 
-Если всё сложится удачно, то&nbsp;в&nbsp;ближайшем будущем тут появится коллективный блог о&nbsp;клиентской оптимизации. Знаем, как тяжело следить за&nbsp;новостями из&nbsp;этой сферы, фильтровать треш, рекламу и&nbsp;просто недостаточно компетентную информацию. Мы&nbsp;верим, что так быть не&nbsp;должно.
+Если всё сложится удачно, то&nbsp;в&nbsp;ближайшем будущем тут появится коллективный блог о&nbsp;клиентской оптимизации. Знаем, как тяжело следить за&nbsp;новостями из&nbsp;этой сферы, фильтровать треш <strike>и угар</strike>, рекламу и&nbsp;просто недостаточно компетентную информацию. Мы&nbsp;верим, что так быть не&nbsp;должно.
 
 Мы&nbsp;&mdash; это команда <nobr>web-разработчиков</nobr>, которая по&nbsp;роду профессиональной деятельности / персонального интереса, следит за&nbsp;новостями из&nbsp;мира frontend performance. И&nbsp;коль скоро мы&nbsp;этим и&nbsp;так уже занимаемся, так почему&nbsp;бы не&nbsp;поделиться тем что мы&nbsp;нашли с&nbsp;другими? Хочется верить, что будет преобладать авторский материал, но&nbsp;совершенно точно, здесь не&nbsp;будет [такого](/), [такого](/) и&nbsp;вот [такого](/).
 
